syntax = "proto2";

package com.andrerinas.headunitrevived.aap.protocol.proto;
option java_outer_classname = "Control";

import "common.proto";
import "media.proto";
import "sensors.proto";

enum ControlMsgType
{
    MESSAGE_VERSION_REQUEST = 1;
    MESSAGE_VERSION_RESPONSE = 2;
    MESSAGE_ENCAPSULATED_SSL = 3;
    MESSAGE_AUTH_COMPLETE = 4;
    MESSAGE_SERVICE_DISCOVERY_REQUEST = 5;
    MESSAGE_SERVICE_DISCOVERY_RESPONSE = 6;
    MESSAGE_CHANNEL_OPEN_REQUEST = 7;
    MESSAGE_CHANNEL_OPEN_RESPONSE = 8;
    MESSAGE_CHANNEL_CLOSE_NOTIFICATION = 9;
    MESSAGE_PING_REQUEST = 11;
    MESSAGE_PING_RESPONSE = 12;
    MESSAGE_NAV_FOCUS_REQUEST = 13;
    MESSAGE_NAV_FOCUS_NOTIFICATION = 14;
    MESSAGE_BYEBYE_REQUEST = 15;
    MESSAGE_BYEBYE_RESPONSE = 16;
    MESSAGE_VOICE_SESSION_NOTIFICATION = 17;
    MESSAGE_AUDIO_FOCUS_REQUEST = 18;
    MESSAGE_AUDIO_FOCUS_NOTIFICATION = 19;
    MESSAGE_CAR_CONNECTED_DEVICES_REQUEST = 20;
    MESSAGE_CAR_CONNECTED_DEVICES_RESPONSE = 21;
    MESSAGE_USER_SWITCH_REQUEST = 22;
    MESSAGE_BATTERY_STATUS_NOTIFICATION = 23;
    MESSAGE_CALL_AVAILABILITY_STATUS = 24;
    MESSAGE_USER_SWITCH_RESPONSE = 25;
    MESSAGE_SERVICE_DISCOVERY_UPDATE = 26;
    MESSAGE_UNEXPECTED_MESSAGE = 255;
    MESSAGE_FRAMING_ERROR = 65535;
}

enum BluetoothPairingMethod
{
    METHOD_1 = 1;
    A2DP = 2;
    METHOD_3 = 3;
    HFP = 4;
}

enum ByeByeReason
{
    USER_SELECTION = 1;
    DEVICE_SWITCH = 2;
    NOT_SUPPORTED = 3;
    NOT_CURRENTLY_SUPPORTED = 4;
    PROBE_SUPPORTED = 5;
}

message Service
{
    message SensorSourceService
    {
        message Sensor
        {
            required SensorType type = 1;
        }
        repeated Sensor sensors = 1;
    }

    message MediaSinkService
    {
        message VideoConfiguration
        {
            enum VideoCodecResolutionType
            {
                _800x480 = 1;
                _1280x720 = 2;
                _1920x1080 = 3;
                _2560x1440 = 4;
                _3840x2160 = 5;
                _720x1280 = 6;
                _1080x1920 = 7;
                _1440x2560 = 8;
                _2160x3840 = 9;
            }

            enum VideoFrameRateType
            {
                _30 = 1;
                _60 = 2;
            }
            required VideoCodecResolutionType codec_resolution = 1;
            required VideoFrameRateType frame_rate = 2;
            required uint32 margin_width = 3;
            required uint32 margin_height = 4;
            required uint32 density = 5;
            optional uint32 decoder_additional_depth = 6;
            optional MediaCodecType video_codec_type = 10;
        }

        required MediaCodecType available_type = 1;
        optional AudioStreamType audio_type = 2;
        repeated AudioConfiguration audio_configs = 3;
        repeated VideoConfiguration video_configs = 4;
        optional bool available_while_in_call = 5;
    }

    message InputSourceService
    {
        message TouchConfig
        {
            required uint32 width = 1;
            required uint32 height = 2;
        }
        repeated uint32 keycodes_supported = 1;
        optional TouchConfig touchscreen = 2;
        optional TouchConfig touchpad = 3;
    }

    message MediaSourceService
    {
        required MediaCodecType type = 1;
        required AudioConfiguration audio_config = 2;
        optional bool available_while_in_call = 3;
    }

    message BluetoothService
    {
        required string car_address = 1;
        repeated BluetoothPairingMethod supported_pairing_methods = 2;
    }

    message NavigationStatusService
    {
        message ImageOptions
        {
            required int32 width = 1;
            required int32 height = 2;
            required int32 colour_deth_bits = 3;
        }
        enum ClusterType
        {
            CustomImageSupported = 1;
            ImageCodesOnly = 2;
        }
        required uint32 minimum_interval_ms = 1;
        required ClusterType type = 2;
        optional ImageOptions image_options = 3;
    }

    message MediaPlaybackStatusService
    {
    }

    enum PhoneStatus_State {
       InCall = 1;
       OnHold = 2;
       HangingUp = 3;
       Incoming = 4;
       Muted = 5;
       Conferenced = 6;
    }

    message PhoneStatus_Call
    {
        optional PhoneStatus_State state = 1;
        //in seconds
        optional uint32 call_duration_seconds = 2;
        optional string caller_number = 3;
        optional string caller_id = 4;
        optional string caller_number_type = 5;
        optional bytes thumbnail = 6;
    }

    message PhoneStatus_Input
    {
        optional string caller_number = 1;
        optional string caller_id = 2;
    }

    message PhoneStatusService
    {
        repeated PhoneStatus_Call calls = 1;
        optional uint32 signal_strength = 2;
    }

    optional PhoneStatusService phone_status_service = 10;

    message VendorExtensionService
    {
        optional string name = 1;
        repeated string package_white_list = 2;
        optional bytes data = 3;
    }

    message GenericNotificationService
    {
    }

    message WifiProjectionService
    {
        optional string car_wifi_bssid = 1;
    }

    required uint32 id = 1;
    optional SensorSourceService sensor_source_service = 2;
    optional MediaSinkService media_sink_service = 3;
    optional InputSourceService input_source_service = 4;
    optional MediaSourceService media_source_service = 5;
    optional BluetoothService bluetooth_service = 6;
    optional NavigationStatusService navigation_status_service = 8;
    optional MediaPlaybackStatusService media_playback_service = 9;
    optional VendorExtensionService vendor_extension_service = 12;
    optional GenericNotificationService generic_notification_service = 13;
    optional WifiProjectionService wifi_projection_service = 14;
}

message ServiceDiscoveryRequest
{
    required string phone_name = 4;
    required string phone_brand = 5;
}

message ServiceDiscoveryResponse
{
    repeated Service services = 1;
    required string make = 2;
    required string model = 3;
    required string year = 4;
    required string vehicle_id = 5;
    required bool driver_position = 6;
    required string head_unit_make = 7;
    required string head_unit_model = 8;
    required string head_unit_software_build = 9;
    required string head_unit_software_version = 10;
    required bool can_play_native_media_during_vr = 11;
    optional bool hide_projected_clock = 12;
}

message ChannelOpenRequest
{
    required int32 priority = 1;
    required int32 service_id = 2;
}

message ChannelOpenResponse
{
    required MessageStatus status = 1;
}

message PingRequest
{
    required int64 timestamp = 1;
    optional int32 bug_report = 2;
}

message PingResponse
{
    required int64 timestamp = 1;
}

message ByeByeRequest
{
    required ByeByeReason reason = 1;
}

message ByeByeResponse
{
}

message VoiceSessionNotification
{
    enum VoiceSessionStatus
    {
        VOICE_STATUS_START = 1;
        VOICE_STATUS_STOP = 2;
    }
    required VoiceSessionStatus status = 1;
}

message AudioFocusRequestNotification
{
    enum AudioFocusRequestType
    {
        NONE = 0;
        GAIN = 1;
        GAIN_TRANSIENT = 2;
        GAIN_TRANSIENT_MAY_DUCK = 3;
        RELEASE = 4;
    }
    optional AudioFocusRequestType request = 1;
}

message AudioFocusNotification
{
    enum AudioFocusStateType
    {
        STATE_GAIN = 1;
        STATE_GAIN_TRANSIENT = 2;
        STATE_LOSS = 3;
        STATE_LOSS_TRANSIENT_CAN_DUCK = 4;
        STATE_LOSS_TRANSIENT = 5;
        STATE_GAIN_MEDIA_ONLY = 6;
        STATE_GAIN_TRANSIENT_GUIDANCE_ONLY = 7;
    }
    required AudioFocusStateType focus_state = 1;
    optional bool unsolicited = 2;
}

enum NavFocusType
{
    NAV_FOCUS_1 = 1;
    NAV_FOCUS_2 = 2;
}

message NavFocusRequestNotification
{
    optional NavFocusType focus_type = 1;
}

message NavFocusNotification
{
    required NavFocusType focus_type = 1;
}

message BatteryStatusNotification
{
    required uint32 battery_level = 1;
    optional uint32 time_remaining_s = 2;
    optional bool critical_battery = 3;
}

message ConnectedDevice
{
    optional string device_name = 1;
    optional int32 device_id = 2;
}

message CarConnectedDevices
{
    repeated ConnectedDevice connected_devices = 1;
    optional bool unsolicited = 2;
    optional bool final_list = 3 [default = true];
}

message UserSwitchResponse
{
    enum UserSwitchStatus
    {
        STATUS_OK = 0;
    }
    optional UserSwitchStatus status = 1;
    optional ConnectedDevice selected_device = 2;
}

message CallAvailabilityStatus
{
    optional bool call_available = 1;
}