syntax = "proto2";

package com.andrerinas.headunitrevived.aap.protocol.proto;
option java_outer_classname = "Media";

enum MsgType
{
    MEDIA_MESSAGE_DATA = 0;
    MEDIA_MESSAGE_CODEC_CONFIG = 1;
    MEDIA_MESSAGE_SETUP = 0x8000;
    MEDIA_MESSAGE_START = 0x8001;
    MEDIA_MESSAGE_STOP = 0x8002;
    MEDIA_MESSAGE_CONFIG = 0x8003;
    MEDIA_MESSAGE_ACK = 0x8004;
    MEDIA_MESSAGE_MICROPHONE_REQUEST = 0x8005;
    MEDIA_MESSAGE_MICROPHONE_RESPONSE = 0x8006;
    MEDIA_MESSAGE_VIDEO_FOCUS_REQUEST = 0x8007;
    MEDIA_MESSAGE_VIDEO_FOCUS_NOTIFICATION = 0x8008;
    MEDIA_MESSAGE_UPDATE_UI_CONFIG_REQUEST = 0x8009;
    MEDIA_MESSAGE_UPDATE_UI_CONFIG_REPLY = 0x800A;
    MEDIA_MESSAGE_AUDIO_UNDERFLOW_NOTIFICATION = 0x800B;
}

enum MediaCodecType
{
    MEDIA_CODEC_AUDIO_PCM = 1;
    MEDIA_CODEC_AUDIO_AAC_LC = 2;
    MEDIA_CODEC_VIDEO_H264_BP = 3;
    MEDIA_CODEC_AUDIO_AAC_LC_ADTS = 4;
    MEDIA_CODEC_VIDEO_VP9 = 5;
    MEDIA_CODEC_VIDEO_AV1 = 6;
    MEDIA_CODEC_VIDEO_H265 = 7;
}

enum AudioStreamType
{
    NONE = 0;
    SPEECH = 1;
    SYSTEM = 2;
    MEDIA = 3;
    ALARM = 4;
    GUIDANCE = 5;
    ANNOUNCEMENT = 6;
    RING = 7;
}

message AudioConfiguration
{
    required uint32 sample_rate = 1;
    required uint32 number_of_bits = 2;
    required uint32 number_of_channels = 3;
}

message Start
{
    required int32 session_id = 1;
    required uint32 configuration_index = 2;
}

message Ack
{
    required int32 session_id = 1;
    required uint32 ack = 2;
}

message MicrophoneRequest
{
    required bool open = 1;
    optional bool anc_enabled = 2;
    optional bool ec_enabled = 3;
    optional int32 max_unacked = 4;
}

message MicrophoneResponse
{
    required int32 status = 1;
    required uint32 session_id = 2;
}

enum VideoFocusMode
{
    VIDEO_FOCUS_PROJECTED = 1;
    VIDEO_FOCUS_NATIVE = 2;
    VIDEO_FOCUS_NATIVE_TRANSIENT = 3;
    VIDEO_FOCUS_PROJECTED_NO_INPUT_FOCUS = 4;
}

message VideoFocusRequestNotification
{
    enum VideoFocusReason
    {
        UNKNOWN = 0;
        PHONE_SCREEN_OFF = 1;
        LAUNCH_NATIVE = 2;
    }

    optional int32 disp_channel_id = 1;
    required VideoFocusMode mode = 2;
    optional VideoFocusReason reason = 3;
}

message VideoFocusNotification
{
    required VideoFocusMode mode = 1;
    required bool unsolicited = 2;
}

message MediaSetupRequest
{
    required uint32 type = 1;
}

message Config
{
    enum ConfigStatus
    {
        DEVICE = 1;
        HEADUNIT = 2;
    }
    required ConfigStatus status = 1;
    required uint32 max_unacked = 2;
    repeated uint32 configuration_indices = 3;
}
